bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value lireMessage
lireMessage() match{
^